Added rgb and clear button

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 
 </head>
 <body>
-  <div id="container">
-   
-    
+  
+  <div class="buttons">
+    <button class="blck">Black</button>
+    <button class="rgb">RGB</button></button>
+    <button class="reset">Clear</button>
+ </div>
+  
+ <div id="container"></div>
+  
 
-
-  </div>
- 
 </body>
 </html>
