included buttons to determine size of graph

--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
     <button class="blck">Black</button>
     <button class="rgb">RGB</button></button>
     <button class="reset">Clear</button>
- </div>
-  
- <div id="container"></div>
-  
+
+ 
+  </div>
+
+<div id="container"></div>
+
+<div class="buttons">
+  <button  id="small" class ="size">Small</button>
+  <button id="medium" class ="size">Medium</button>
+  <button id="large" class ="size">Large</button>
+</div>
 
 </body>
 </html>
